<resources>

    <string name="login">Login</string>
    <string name="register">Sign Up</string>
    <string name="email">Email</string>
    <string name="welcome">Welcome</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="start">Get Started</string>
    <string name="sms_permission_needed_to_send_sos">SMS permission needed to send SOS</string>
</resources>
